2012-09-28  Christopher Roy Bratusek <nano@tuxfamily.org>
	* lisp/sawfish/wm/custom.jl: add some useful widgets to the main group
	of SawfishConfig (replacing bottom-buttons)

	* lisp/sawfish/gtk/widgets.jl: new defcustom-widgets: 'label, 'link,
	'xdg and 'shell

	* lisp/sawfish/cfg/shell.jl: removed some buttons from the bottom of
	SawfishConfig

2012-09-16  Christopher Roy Bratusek <nano@tuxfamily.org>
	* next-lisp/Undo-viewport.jl
	* next-lisp/sawflibs
	* next-lisp/sawflibs/readme.org
	* next-lisp/sawflibs/tile
	* next-lisp/sawflibs/tile/col.jl
	* next-lisp/sawflibs/tile/tall.jl
	* next-lisp/sawflibs/tile/tiler.jl
	* next-lisp/sawflibs/tile/utils.jl
	* next-lisp/sawflibs/tile.jl
	* next-lisp/sawflibs/utils.jl
	* next-lisp/undo.jl
	* next-lisp/uptimes.jl: added stuff marked for inclusion into Sawfish.
	NOTE: none of those modules is yet ready!

	* AUTOSTART
	* KEYBINDINGS
	* OPTIONS
	* XSettings: moved into doc/

	* man/Makefile.in: build FAQ and USERDOC in ../doc/, do gitclean for docs
	here rather than in Makefile.in

	* sawfish.pc.in
	* sawfish.spec.in
	* sawfish.ebuild.in
	* sawfish.desktop
	* sawfish-ksm.desktop
	* sawfish-session.desktop
	* sawfish-wm.desktop: moved into data/

	* sawfish.doap: removed (a relict from git.gnome.org)

	* debian/clean: removed (no longer needed)

	* debian/rules: call distclean rather than debclean

	* Makefile.in: remove debclean rule (no longer needed), improved distclean
	and gitclean rules, added export rule

	* themes/Makefile.in: improved distclean rule

	* debian/rules
	* data/sawfish.ebuild.in
	* data/sawfish.spec.in
	* configure.in: updated for above changes

2012-09-13  Christopher Roy Bratusek <nano@tuxfamily.org>
	* lisp/sawfish/wm/frames.jl: fixed cursor definitions in defcustoms
	(replace ll_angel with correct ll_angle, sb_bottom_arrow by
	sb_down_arrow and sb_top_arrow by sb_up_arrow). Set maximium width for
	custom-border-width in SawfishConfig to 10 [fuchur]

	* configure.in: bump version to 1.9.90
