@@ -512,7 +512,7 @@
 
   (define-widget-type 'link make-link-item)
 
-  (define (make-xdg-item changed-callback file label create)
+  (define (make-xdg-item changed-callback file label)
     (declare (unused changed-callback))
     (let ((box (gtk-hbox-new nil box-spacing))
 	  (button (gtk-button-new-with-label (_ label))))
@@ -520,11 +520,17 @@
       (gtk-button-set-relief button 'none)
       (g-signal-connect button "clicked"
 	(lambda ()
-	  (if (and (not (file-exists-p file))
-		   create)
-	      (system (format nil "touch %s && xdg-open %s &" file file))
-	    (when (file-exists-p file)
-	      (system (format nil "xdg-open %s &" file))))))
+	  (if (or (equal file "~/.sawfishrc")
+		  (equal file "~/.sawfish/rc"))
+	      (if (file-exists-p "~/.sawfish/rc")
+		  (system (format nil "xdg-open ~/.sawfish/rc &"))
+		(if (file-exists-p "~/.sawfishrc")
+		    (system (format nil "xdg-open ~/.sawfishrc &"))
+		  (system (format nil "touch ~/.sawfishrc && xdg-open ~/.sawfishrc &"))))
+	    (if (not (file-exists-p file))
+	        (system (format nil "touch %s && xdg-open %s &" file file))
+	      (when (file-exists-p file)
+	        (system (format nil "xdg-open %s &" file)))))))
       (gtk-widget-show-all box)
       (lambda (op)
 	(if (eq op 'gtk-widget)
