@@ -1,3 +1,9 @@
+2012-09-29  Christopher Roy Bratusek <nano@tuxfamily.org>
+	* lisp/sawfish/gtk/widget.jl: modified xdg widget to check for
+	~/.sawfish/rc, too, if ~/.sawfishrc was requested (or vice versa)
+
+	* lisp/sawfish/wm/custom.jl: removed some useless doc strings
+
 2012-09-28  Christopher Roy Bratusek <nano@tuxfamily.org>
 	* lisp/sawfish/wm/custom.jl: add some useful widgets to the main group
 	of SawfishConfig (replacing bottom-buttons)
